<resources>
    <string name="app_name">GithubUserApi</string>

    <string name="user_search">Cari Pengguna</string>
    <string name="user_name">Nama Pengguna</string>
    <string name="username">Username</string>
    <string name="user_photo">Foto Profil</string>

    <string name="company">Perusahaan</string>
    <string name="location">Lokasi</string>
    <string name="repository">Repository</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_following">Diikuti</string>
    <string name="tab_followers">Pengikut</string>
    <string name="account_not_found">Akun tidak ditemukan :(</string>
    <string name="image_not_found">Image Not Found</string>
    <string name="image_navigate_next">Image navigate next</string>
    <string name="network_error">Periksa Koneksi Anda</string>
    <string name="title_toolbar">Consumer Github App</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="desc_image">Image Profile</string>

    <string name="desc_image_repo">Gambar Repository</string>
    <string name="desc_image_location">Gambar Lokasi</string>
    <string name="desc_image_company">Gambar Perusahaan</string>
    <string name="desc_favorite">Favorit</string>

    <string name="followers_empty">Tidak ada Pengikut</string>
    <string name="following_empty">Tidak ada yang diikuti</string>
    <string name="set_lang">Pengaturan</string>
    <string name="favorite_label">Favorite</string>
    <string name="empty_favorite">Data Kosong</string>
    <string name="succes_add">Ditambahkan ke favorite</string>
    <string name="title_seeData">Lihat data</string>
    <string name="succes_delete">Berhasil Dihapus</string>

</resources>