<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_grey"
    android:layout_height="match_parent"
    tools:context=".ui.ListFavoriteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarFav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlue"
            android:theme="@style/Theme.GithubUserApi"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

            <TextView
                android:id="@+id/tvTitleFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_label"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"

                />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@color/colorGrey"
        android:padding="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_16dp"
        app:cardElevation="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/pbFavorite"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgNotFound"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_not_found"
            android:src="@drawable/ic_empty"
            android:visibility="gone"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNotFound"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/empty_favorite"
            android:textColor="@color/colorRed"
            android:textSize="30sp"
            android:visibility="invisible" />

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>